Fix swagger and docs

--- a/api-reference/data/body/index.mdx
+++ b/api-reference/data/body/index.mdx
@@ -14,10 +14,11 @@ curl --request GET \
 ```
 
 ```python
-data = client.Body.get(user_id=*,
-      start_date="2020-01-01",
-      end_date="2021-01-01"
-      )
+data = client.Body.get(
+     user_id=*,
+     start_date="2020-01-01",
+     end_date="2021-01-01"
+     )
 ```
 
 </Swagger>
