--- a/api-reference/data/vitals/ige.mdx
+++ b/api-reference/data/vitals/ige.mdx
@@ -6,7 +6,7 @@ import { Swagger } from "@theme/swagger";
 
 ```bash
 curl --request GET \
-     --url https://api.tryvital.io/v2/timeseries/{user_id}/ige?start_date=2021-01-01&end_date=2021-02-01 \
+     --url {{BASE_URL}}/v2/timeseries/{user_id}/ige?start_date=2021-01-01&end_date=2021-02-01 \
      --header 'Accept: application/json'
      --header 'x-vital-api-key: <API_KEY>'
 ```
