--- a/docs/api/authentication.mdx
+++ b/docs/api/authentication.mdx
@@ -14,7 +14,7 @@ request. For instance:
 
 ```bash
 curl --request GET
-  --url 'https://api.tryvital.io/v2/providers'
+  --url '{{BASE_URL}}/v2/providers'
   --header 'x-vital-api-key: <YOUR-API-KEY>'
 ```
 
