--- a/docs/vital-link/launching_link.mdx
+++ b/docs/vital-link/launching_link.mdx
@@ -35,7 +35,7 @@ const resp = await client.Link.create(client_user_id, "oura");
 
 ```bash
 curl --request POST \
-     --url https://api.tryvital.io/v2/link/token \
+     --url {{BASE_URL}}/v2/link/token \
      --header 'Accept: application/json' \
      --header 'Content-Type: application/json'
      --header 'x-vital-api-key: <API-KEY>'
