--- a/docs/welcome/environments.mdx
+++ b/docs/welcome/environments.mdx
@@ -12,7 +12,7 @@ When you sign up to Vital you get access to two envrionments, Sandbox and Produc
 
 | Environment |
 | ----------- | ------------------------------- |
-| Production  | https://api.tryvital.io         |
+| Production  | {{BASE_URL}}                    |
 | Sandbox     | https://api.sandbox.tryvital.io |
 
 <br />
