--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -40,7 +40,7 @@ our Sandbox and Production environments, and be given a unique API key for each 
 
 | API Urls              |                                    |
 | --------------------- | ---------------------------------- |
-| @@FiZap production    | https://api.tryvital.io            |
+| @@FiZap production    | {{BASE_URL}}                       |
 | @@FiZap production-eu | https://api.eu.tryvital.io         |
 | @@FiBox sandbox       | https://api.sandbox.tryvital.io    |
 | @@FiBox sandbox-eu    | https://api.sandbox.eu.tryvital.io |
@@ -124,7 +124,7 @@ As you might have noticed, you use both a server and a client-side component to 
 
 The Vital flow begins when your user wants to connect their device to your application.
 
-<HStack alignItems={"flex-start"} height={"900px"} overflow={"hidden"}>
+<HStack alignItems={"flex-start"} height={"970px"} overflow={"hidden"}>
   <VStack
     style={{
       height: "100%",
