--- a/api-reference/data/activity/index.mdx
+++ b/api-reference/data/activity/index.mdx
@@ -14,10 +14,11 @@ curl --request GET \
 ```
 
 ```python
-data = client.Activity.get(user_id=*,
+data = client.Activity.get(
+    user_id=*,
     start_date="2020-01-01",
     end_date="2021-01-01"
-    )
+)
 ```
 
 </Swagger>
@@ -34,10 +35,11 @@ curl --request GET \
 ```
 
 ```python
-data = client.Activity.get_raw(user_id=*,
-          start_date="2020-01-01",
-          end_date="2021-01-01"
-          )
+data = client.Activity.get_raw(
+    user_id="*",
+    start_date="2020-01-01",
+    end_date="2021-01-01",
+)
 ```
 
 </Swagger>
