--- a/api-reference/data/body/index.mdx
+++ b/api-reference/data/body/index.mdx
@@ -35,10 +35,11 @@ curl --request GET \
 ```
 
 ```python
-data = client.Body.get_raw(user_id=*,
-          start_date="2020-01-01",
-          end_date="2021-01-01"
-          )
+data = client.Body.get_raw(
+    user_id="*",
+    start_date="2020-01-01",
+    end_date="2021-01-01",
+)
 ```
 
 </Swagger>
