--- a/api-reference/data/sleep/index.mdx
+++ b/api-reference/data/sleep/index.mdx
@@ -14,14 +14,16 @@ curl --request GET \
 ```
 
 ```js
-data = client.Sleep.get(user_id=*,
+data = client.Sleep.get(
+    user_id=*,
     start_date="2020-01-01",
     end_date="2021-01-01"
 )
 ```
 
 ```python
-data = client.Sleep.get(user_id=*,
+data = client.Sleep.get(
+    user_id=*,
     start_date="2020-01-01",
     end_date="2021-01-01"
 )
