--- a/api-reference/data/vitals/igg.mdx
+++ b/api-reference/data/vitals/igg.mdx
@@ -12,10 +12,11 @@ curl --request GET \
 ```
 
 ```python
-data = client.Vitals.igg(user_id=*,
-        start_date="2020-01-01",
-        end_date="2021-01-01"
-        )
+data = client.Vitals.igg(
+    user_id=*,
+    start_date="2020-01-01",
+    end_date="2021-01-01"
+)
 ```
 
 </Swagger>
