--- a/api-reference/data/sleep/index.mdx
+++ b/api-reference/data/sleep/index.mdx
@@ -64,7 +64,7 @@ curl --request GET \
 ```
 
 ```js
-data = client.Sleep.getRaw(sleep_id=*)
+data = await client.Sleep.getRaw(sleep_id=*)
 ```
 
 ```python
