--- a/api-reference/data/sleep/index.mdx
+++ b/api-reference/data/sleep/index.mdx
@@ -16,16 +16,16 @@ curl --request GET \
 ```js
 data = client.Sleep.get(
     user_id=*,
-    start_date="2020-01-01",
-    end_date="2021-01-01"
+    start_date={{START_DATE}},
+    end_date={{END_DATE}}
 )
 ```
 
 ```python
 data = client.Sleep.get(
     user_id=*,
-    start_date="2020-01-01",
-    end_date="2021-01-01"
+    start_date={{START_DATE}},
+    end_date={{END_DATE}}
 )
 ```
 
