--- a/api-reference/data/vitals/blood_pressure.mdx
+++ b/api-reference/data/vitals/blood_pressure.mdx
@@ -14,8 +14,8 @@ curl --request GET \
 ```python
 data = client.Vitals.igg(
     user_id=*,
-    start_date="2020-01-01",
-    end_date="2021-01-01"
+    start_date={{START_DATE}},
+    end_date={{END_DATE}}
 )
 ```
 
