--- a/api-reference/data/vitals/glucose.mdx
+++ b/api-reference/data/vitals/glucose.mdx
@@ -6,7 +6,7 @@ import { Swagger } from "@theme/swagger";
 
 ```bash
 curl --request GET \
-     --url {{BASE_URL}}/v2/timeseries/{user_id}/glucose?start_date=2021-01-01&end_date=2021-02-01 \
+     --url {{BASE_URL}}/v2/timeseries/{user_id}/glucose?start_date={{START_DATE}}&end_date={{END_DATE}} \
      --header 'Accept: application/json'
      --header 'x-vital-api-key: <API_KEY>'
 ```
@@ -15,8 +15,8 @@ curl --request GET \
 data = client.Vitals.glucose(
     "glucose",
     user_id=*,
-    start_date="2020-01-01",
-    end_date="2021-01-01"
+    start_date={{START_DATE}},
+    end_date={{END_DATE}}
 )
 ```
 
