--- a/api-reference/data/workouts/index.mdx
+++ b/api-reference/data/workouts/index.mdx
@@ -16,8 +16,8 @@ curl --request GET \
 ```python
 data = client.Workouts.get(
      user_id=*,
-     start_date="2020-01-01",
-     end_date="2021-01-01"
+     start_date={{START_DATE}},
+     end_date={{END_DATE}}
 )
 ```
 
@@ -55,8 +55,8 @@ curl --request GET \
 data = client.Workouts.get_raw(
      user_id=*,
      provider="oura"
-     start_date="2020-01-01",
-     end_date="2021-01-01"
+     start_date={{START_DATE}},
+     end_date={{END_DATE}}
 )
 ```
 
