--- a/api-reference/data/vitals/blood_oxygen.mdx
+++ b/api-reference/data/vitals/blood_oxygen.mdx
@@ -6,7 +6,7 @@ import { Swagger } from "@theme/swagger";
 
 ```bash
 curl --request GET \
-     --url {{BASE_URL}}/v2/timeseries/{user_id}/blood_oxygen?start_date=2021-01-01&end_date=2021-02-01 \
+     --url {{BASE_URL}}/v2/timeseries/{user_id}/blood_oxygen?start_date={{START_DATE}}&end_date={{END_DATE}} \
      --header 'Accept: application/json'
      --header 'x-vital-api-key: <API_KEY>'
 ```
