--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -40,7 +40,7 @@ our Sandbox and Production environments, and be given a unique API key for each 
 
 | API Urls              |                                    |
 | --------------------- | ---------------------------------- |
-| @@FiZap production    | {{BASE_URL}}                       |
+| @@FiZap production    | https://api.tryvital.io            |
 | @@FiZap production-eu | https://api.eu.tryvital.io         |
 | @@FiBox sandbox       | https://api.sandbox.tryvital.io    |
 | @@FiBox sandbox-eu    | https://api.sandbox.eu.tryvital.io |
