Fix start date and end_date

--- a/api-reference/data/body/index.mdx
+++ b/api-reference/data/body/index.mdx
@@ -16,8 +16,8 @@ curl --request GET \
 ```python
 data = client.Body.get(
     user_id=*,
-    start_date="2020-01-01",
-    end_date="2021-01-01"
+    start_date={{START_DATE}},
+    end_date={{END_DATE}}
 )
 ```
 
@@ -37,8 +37,8 @@ curl --request GET \
 ```python
 data = client.Body.get_raw(
     user_id="*",
-    start_date="2020-01-01",
-    end_date="2021-01-01",
+    start_date={{START_DATE}},
+    end_date={{END_DATE}}
 )
 ```
 
