--- a/api-reference/user/index.mdx
+++ b/api-reference/user/index.mdx
@@ -10,6 +10,7 @@ import { Swagger } from "@theme/swagger";
 curl --request POST \
      --url {{BASE_URL}}/v2/user/ \
      --header 'Accept: application/json' \
+     --header 'x-vital-api-key: <API_KEY>' \
      --header 'Content-Type: application/json' \
      --data '
 {
@@ -37,6 +38,7 @@ user = client.User.create(client_user_id)
 ```bash
 curl --request GET \
      --url {{BASE_URL}}/v2/user/{user_id} \
+     --header 'x-vital-api-key: <API_KEY>' \
      --header 'Accept: application/json'
 ```
 
@@ -57,6 +59,7 @@ user = client.User.get(user_id)
 ```bash
 curl --request DELETE \
      --url {{BASE_URL}}/v2/user/{user_id} \
+     --header 'x-vital-api-key: <API_KEY>' \
      --header 'Accept: application/json'
 ```
 
@@ -77,7 +80,8 @@ user = client.User.delete(user_id)
 ```bash
 curl --request GET \
      --url {{BASE_URL}}/v2/user/ \
-     --header 'Accept: application/json'
+     --header 'Accept: application/json' \
+     --header 'x-vital-api-key: <API_KEY>'
 ```
 
 ```js
@@ -97,7 +101,8 @@ user = client.User.get_all(user_id)
 ```bash
 curl --request GET \
      --url {{BASE_URL}}/v2/user/providers/{user_id} \
-     --header 'Accept: application/json'
+     --header 'Accept: application/json' \
+     --header 'x-vital-api-key: <API_KEY>'
 ```
 
 ```js
@@ -117,7 +122,8 @@ user = client.User.providers(user_id)
 ```bash
 curl --request POST \
      --url {{BASE_URL}}/v2/user/refresh/{user_id} \
-     --header 'Accept: application/json'
+     --header 'Accept: application/json' \
+     --header 'x-vital-api-key: <API_KEY>'
 ```
 
 ```js
@@ -137,7 +143,8 @@ user = client.User.refresh(user_id)
 ```bash
 curl --request DELETE \
      --url {{BASE_URL}}/v2/user/{user_id}/provider \
-     --header 'Accept: application/json'
+     --header 'Accept: application/json' \
+     --header 'x-vital-api-key: <API_KEY>'
 ```
 
 ```js
