Remove commas from curl examples

--- a/api-reference/link/index.mdx
+++ b/api-reference/link/index.mdx
@@ -14,7 +14,7 @@ curl --request POST \
      --header 'x-vital-api-key: <API_KEY>' \
      --data '
 {
-     "user_id": "1875c190-0cd6-46c1-8670-5b56a7794b78",
+     "user_id": "1875c190-0cd6-46c1-8670-5b56a7794b78"
 }
 '
 ```
@@ -96,7 +96,7 @@ curl --request POST \
      --header 'x-vital-link-token: <VITAL-LINK-TOKEN>'
      --data '
 {
-     "email": "test@email.com",
+     "email": "test@email.com"
 }
 '
 ```
