--- a/api-reference/user/index.mdx
+++ b/api-reference/user/index.mdx
@@ -14,7 +14,7 @@ curl --request POST \
      --header 'Content-Type: application/json' \
      --data '
 {
-     "client_user_id": "string",
+     "client_user_id": "your_unique_id"
 }
 '
 ```
