set provider in curl to oauth provider

--- a/api-reference/link/index.mdx
+++ b/api-reference/link/index.mdx
@@ -35,7 +35,7 @@ user = client.Link.create(user_id)
 
 ```bash
 curl --request GET \
-     --url {{BASE_URL}}/v2/link/provider/oauth/{provider} \
+     --url {{BASE_URL}}/v2/link/provider/oauth/{oauth_provider} \
      --header 'Accept: application/json'
      --header 'Content-Type: application/json' \
      --header 'x-vital-link-token: <VITAL-LINK-TOKEN>'
