docs on adding a new integration

--- a/docs/contributing/run-locally.mdx
+++ b/docs/contributing/run-locally.mdx
@@ -4,6 +4,7 @@ slug: "run-locally"
 hidden: false
 createdAt: "2022-05-04T15:30:26.145Z"
 updatedAt: "2022-05-04T15:29:12.162Z"
+sidebar_position: 1
 ---
 
 import { Image } from "@chakra-ui/react";
