--- a/api-reference/link/index.mdx
+++ b/api-reference/link/index.mdx
@@ -4,6 +4,8 @@ import { Swagger } from "@theme/swagger";
 
 ## Generate Link Token
 
+Vital's link token is a one time use token with an expiry of ten minutes.
+
 <Swagger endpoint={"/link/token"} method={"post"} title={"Create a new link token"} include_client_instantiation>
 
 ```bash
