--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -47,18 +47,7 @@ our Sandbox and Production environments, and be given a unique API key for each 
 
 Example API collection can be downloaded from [here](https://www.getpostman.com/collections/d4580c54f85374bd7cc5) or by installing postman first and clicking on the below button.
 
-<Button
-  mb={"30px"}
-  href={"postman:https://www.getpostman.com/collections/d4580c54f85374bd7cc5"}
-  sx={{ ":hover": { cursor: "pointer" }, border: 0, bg: "white" }}
-  onClick={() =>
-    window.open(
-      "postman:https://www.getpostman.com/collections/d4580c54f85374bd7cc5"
-    )
-  }
->
-  <Image src={"/img/postman.png"} width={"100px"} />
-</Button>
+[![Run in Postman](https://run.pstmn.io/button.svg)](https://app.getpostman.com/run-collection/9932845-64856822-6be6-4b9d-b5f1-eefda49d4102?action=collection%2Ffork&collection-url=entityId%3D9932845-64856822-6be6-4b9d-b5f1-eefda49d4102%26entityType%3Dcollection%26workspaceId%3De5fa4775-e508-4e02-99ef-ff2d9bf9b8ca)
 
 <br />
 
