Added LOOM video

--- a/docs/sdks/iOS.mdx
+++ b/docs/sdks/iOS.mdx
@@ -14,9 +14,17 @@ The iOS SDK is split into three main components: VitalCore, VitalHealthKit and V
 
 ## 2. Installation
 
-We use SPM (Swift Package Manager) to manage dependencies. We will soon have the SDK publicly available.
+We use SPM (Swift Package Manager) to manage dependencies. You can add `https://github.com/adeptlabs/vital-ios` when adding it as a dependency to your project. Independently of using VitalDevices, or VitalHealthKit, make sure you always add VitalCore. The first two depend on the latter.
 
----
+<iframe
+  src="https://www.loom.com/embed/fa091653aab24feeb52253a584c69512"
+  frameborder="0"
+  allowfullscreen="true"
+  width="100%"
+  height="533"
+>
+  {" "}
+</iframe>
 
 ## 3. Initial Setup
 
