--- a/docs/sdks/iOS.mdx
+++ b/docs/sdks/iOS.mdx
@@ -14,7 +14,7 @@ The iOS SDK is split into three main components: VitalCore, VitalHealthKit and V
 
 ## 2. Installation
 
-We use SPM (Swift Package Manager) to manage dependencies. You can add `https://github.com/adeptlabs/vital-ios` when adding it as a dependency to your project. Independently of using VitalDevices, or VitalHealthKit, make sure you always add VitalCore. The first two depend on the latter.
+We use SPM (Swift Package Manager) to manage dependencies. You can add `https://github.com/tryVital/vital-ios` when adding it as a dependency to your project. Independently of using VitalDevices, or VitalHealthKit, make sure you always add VitalCore. The first two depend on the latter.
 
 <iframe
   src="https://www.loom.com/embed/fa091653aab24feeb52253a584c69512"
