--- a/api-reference/labs/results/index.mdx
+++ b/api-reference/labs/results/index.mdx
@@ -11,7 +11,7 @@ from vital import Client
 
 client = Client(api_key, "sandbox")
 
-data = client.Testkits.result("2021-01-01", "2022-12-02")
+data = client.Testkits.result("<order_id>")
 ```
 
 </Swagger>
@@ -25,7 +25,7 @@ from vital import Client
 
 client = Client(api_key, "sandbox")
 
-data = client.Testkits.result("2021-01-01", "2022-12-02")
+data = client.Testkits.result("<order_id">)
 ```
 
 </Swagger>
@@ -39,7 +39,7 @@ from vital import Client
 
 client = Client(api_key, "sandbox")
 
-data = client.Testkits.result("2021-01-01", "2022-12-02")
+data = client.Testkits.metadata("<order_id>")
 ```
 
 </Swagger>
