Test changlog auto render

--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -4,15 +4,17 @@ slug: /changelog
 title: Changlelog
 ---
 
-import { Badge } from "@theme/badge";
+import Changelog from "../static/data/changelog.json";
+import { Text, VStack } from "@chakra-ui/react";
+import ReactMarkdown from "react-markdown";
 
-# Changelog
-
-### 0.0.1 (27-04-2022)
-
-<Badge type={"success"}>Added</Badge>
-
-<br />
-
-- We have migrated our to Docusaurus. This means it will be easier to iterate on our documentation.
-  We will be adding more features and fixing bugs.
+<div>
+  {Changelog.map((el) => (
+    <VStack alignItems={"flex-start"} spacing={0}>
+      <h2>
+        {el.release} ({el.date})
+      </h2>
+      <ReactMarkdown>{el.body}</ReactMarkdown>
+    </VStack>
+  ))}
+</div>
