--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -10,7 +10,7 @@ import ReactMarkdown from "react-markdown";
 
 <div>
   {Changelog.map((el) => (
-    <VStack alignItems={"flex-start"} spacing={0}>
+    <VStack alignItems={"flex-start"} spacing={0} mb={30}>
       <h2>
         {el.release} ({el.date})
       </h2>
