--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 10
 slug: /changelog
-title: Changlelog
+title: Changelog
 ---
 
 import Changelog from "../static/data/changelog.json";
