--- a/docs/sdks/iOS.mdx
+++ b/docs/sdks/iOS.mdx
@@ -294,7 +294,16 @@ You can check our example app, to see how we do it.
 
 ### 2. Freestyle Libre 1
 
-We currently support Libre 1 sensors. We use NFC for taking readings:
+We currently support Libre 1 sensors via NFC readings. Please make sure you add NFC capabilities in your app:
+
+<Image src="/img/iOS/nfc_permission.png" />
+
+<br />
+<br />
+
+Also add the key `NFCReaderUsageDescription` in your info.plist. This key should explain why your app needs to use NFC.
+
+To use the reader:
 
 ```swift
 let reader = Libre1Reader(
@@ -325,7 +334,7 @@ let samples: [QuantitySample] = reading.samples
 As previously mentioned, you are responsible for sending the samples to the server. You can do so via `VitalNetworkClient.shared.timeSeries.post`.
 
 :::caution
-Readings taken using our SDK are not guaranteed to match the official Freestyle Libre app.
+Readings taken with the SDK are not guaranteed to match the official Freestyle Libre app.
 :::
 
 ---
@@ -336,7 +345,7 @@ VitalHealthKit is an abstraction on top of HealthKit that 1) automates the extra
 
 You start by enabling HealthKit capabilities in your app. Please follow this [guide](https://developer.apple.com/documentation/healthkit/setting_up_healthkit). It should looks like this:
 
-<Image src="/img/iOS/health_kit_permissions.png" />
+<Image src="/img/iOS/health_kit_permission.png" />
 
 <br />
 <br />
