--- a/docs/welcome/environments.mdx
+++ b/docs/welcome/environments.mdx
@@ -8,12 +8,14 @@ updatedAt: "2022-04-08T13:17:12.162Z"
 
 import { Grid, GridItem, Box, Heading } from "@chakra-ui/react";
 
-When you sign up to Vital you get access to two envrionments, Sandbox and Production.
+When you sign up to Vital you get access to two environments, Sandbox and Production.
 
-| Environment |
-| ----------- | ------------------------------- |
-| Production  | https://api.tryvital.io         |
-| Sandbox     | https://api.sandbox.tryvital.io |
+| Environment URLs      |                                    |
+| --------------------- | ---------------------------------- |
+| @@FiZap production    | https://api.tryvital.io            |
+| @@FiZap production-eu | https://api.eu.tryvital.io         |
+| @@FiBox sandbox       | https://api.sandbox.tryvital.io    |
+| @@FiBox sandbox-eu    | https://api.sandbox.eu.tryvital.io |
 
 <br />
 <br />
